syntax = "proto3";

option java_package = "xyz.lilsus.papp.proto.settings";
option java_multiple_files = true;

message Payments {
    bool always_confirm_payment = 1;
    float confirm_payment_above = 2;
}

message SettingsStore {
    Payments payment_settings = 1;
    string currency = 2;
}